Adapted functions + finished HowToUse notebook

--- a/htu_result_saver.ipynb
+++ b/htu_result_saver.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,13 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'job_status': 'JobStatus.RUNNING', 'num_qubits': 2, 'whatever_info': 'whatever', 'blabla': 'blabla'}\n"
+     ]
+    }
+   ],
    "source": [
-    "from Scratch import metadata_helper\n",
+    "from result_saver import metadata_helper\n",
     "\n",
-    "metadata = metadata_helper(num_qubits=2, whatever_info=\"whatever\", blabla=\"blabla\")\n",
+    "metadata = metadata_helper(num_qubits=2, whatever_info=\"whatever\", blabla=\"blabla\",)\n",
     "job = backend.run(metadata, transpiled_qc, shots = 1, meas_level=1, meas_return='single', job_tags=[\"test\", \"test2\"])"
    ]
   },
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -111,354 +119,68 @@
        "      <th>backend_name</th>\n",
        "      <th>job_id</th>\n",
        "      <th>tags</th>\n",
-       "      <th>meas_level</th>\n",
        "      <th>shots</th>\n",
-       "      <th>tags_xp</th>\n",
-       "      <th>rep_delay</th>\n",
-       "      <th>sampled_state</th>\n",
+       "      <th>meas_level</th>\n",
        "      <th>num_qubits</th>\n",
+       "      <th>whatever_info</th>\n",
+       "      <th>blabla</th>\n",
        "      <th>job_status</th>\n",
-       "      <th>execution_date</th>\n",
-       "      <th>extra</th>\n",
-       "      <th>optimization_level</th>\n",
-       "      <th>code</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>rounds</th>\n",
-       "      <th>logical</th>\n",
-       "      <th>layout</th>\n",
-       "      <th>descr</th>\n",
-       "      <th>num_CNOTS_layers</th>\n",
-       "      <th>num_CNOT_layers</th>\n",
-       "      <th>resets</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2667</th>\n",
-       "      <td>2024-03-11 12:51:17.882000+01:00</td>\n",
-       "      <td>mean_pos_sherbrooke</td>\n",
-       "      <td>ibm_sherbrooke</td>\n",
-       "      <td>cqqf0d9v78p0008mdt3g</td>\n",
-       "      <td>[1*1e6/d*T, RepCode Mean Positions]</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0005</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2024-03-11 13:49:38.212792+01:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RepetitionCodeCircuit</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mean positions</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2666</th>\n",
-       "      <td>2024-03-11 12:51:11.681000+01:00</td>\n",
-       "      <td>mean_pos_sherbrooke</td>\n",
-       "      <td>ibm_sherbrooke</td>\n",
-       "      <td>cqqf0bsr43fg008x5td0</td>\n",
-       "      <td>[1*1e6/d*T, RepCode Mean Positions]</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0005</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2024-03-11 13:49:23.236327+01:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RepetitionCodeCircuit</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mean positions</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2665</th>\n",
-       "      <td>2024-03-11 12:51:05.921000+01:00</td>\n",
-       "      <td>mean_pos_sherbrooke</td>\n",
-       "      <td>ibm_sherbrooke</td>\n",
-       "      <td>cqqf0a9v78p0008mdt30</td>\n",
-       "      <td>[1*1e6/d*T, RepCode Mean Positions]</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0005</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2024-03-11 13:48:11.574345+01:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RepetitionCodeCircuit</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mean positions</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2664</th>\n",
-       "      <td>2024-03-11 12:50:59.625000+01:00</td>\n",
-       "      <td>mean_pos_sherbrooke</td>\n",
-       "      <td>ibm_sherbrooke</td>\n",
-       "      <td>cqqf08s4td0g008cqmk0</td>\n",
-       "      <td>[1*1e6/d*T, RepCode Mean Positions]</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0005</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2024-03-11 13:47:56.327659+01:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RepetitionCodeCircuit</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mean positions</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2663</th>\n",
-       "      <td>2024-03-11 12:50:53.619000+01:00</td>\n",
-       "      <td>mean_pos_sherbrooke</td>\n",
-       "      <td>ibm_sherbrooke</td>\n",
-       "      <td>cqqf078267h0008gdks0</td>\n",
-       "      <td>[1*1e6/d*T, RepCode Mean Positions]</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0005</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2024-03-11 13:47:41.271622+01:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RepetitionCodeCircuit</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mean positions</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2023-10-23 18:56:40.188131+02:00</td>\n",
-       "      <td>ResSaver_testing</td>\n",
-       "      <td>None</td>\n",
-       "      <td>cmvabj6605a0008f2t30</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2023-10-23 18:56:42.670179+02:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-03-13 17:17:47.259000+01:00</td>\n",
+       "      <td>htu_result_saver</td>\n",
+       "      <td>ibmq_mumbai</td>\n",
+       "      <td>cqrx3axhnkbg0081eykg</td>\n",
+       "      <td>[test, test2]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>whatever</td>\n",
+       "      <td>blabla</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2023-10-23 18:55:40.849527+02:00</td>\n",
-       "      <td>ResSaver_testing</td>\n",
-       "      <td>None</td>\n",
-       "      <td>cmvab34fwrrg008859tg</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2023-10-23 18:55:43.195815+02:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2023-10-23 18:54:48.223339+02:00</td>\n",
-       "      <td>ResSaver_testing</td>\n",
-       "      <td>None</td>\n",
-       "      <td>cmvaap2vpdgg008ge530</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2023-10-23 18:54:50.396367+02:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2023-10-23 18:52:49.801549+02:00</td>\n",
-       "      <td>ResSaver_testing</td>\n",
-       "      <td>None</td>\n",
-       "      <td>cmva9rf421n00081q6hg</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2023-10-23 18:52:52.463404+02:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2023-10-23 18:49:33.139925+02:00</td>\n",
-       "      <td>not_defined_</td>\n",
-       "      <td>None</td>\n",
-       "      <td>cmva878fwrrg008859n0</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JobStatus.DONE</td>\n",
-       "      <td>2023-10-23 18:49:35.682758+02:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-03-13 17:12:41.329000+01:00</td>\n",
+       "      <td>htu_result_saver</td>\n",
+       "      <td>ibmq_mumbai</td>\n",
+       "      <td>cqrx0yb00evg008cydyg</td>\n",
+       "      <td>[test, test2]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>whatever</td>\n",
+       "      <td>blabla</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2668 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         creation_date  ... resets\n",
-       "2667  2024-03-11 12:51:17.882000+01:00  ...  False\n",
-       "2666  2024-03-11 12:51:11.681000+01:00  ...  False\n",
-       "2665  2024-03-11 12:51:05.921000+01:00  ...  False\n",
-       "2664  2024-03-11 12:50:59.625000+01:00  ...  False\n",
-       "2663  2024-03-11 12:50:53.619000+01:00  ...  False\n",
-       "...                                ...  ...    ...\n",
-       "17    2023-10-23 18:56:40.188131+02:00  ...    NaN\n",
-       "18    2023-10-23 18:55:40.849527+02:00  ...    NaN\n",
-       "19    2023-10-23 18:54:48.223339+02:00  ...    NaN\n",
-       "20    2023-10-23 18:52:49.801549+02:00  ...    NaN\n",
-       "21    2023-10-23 18:49:33.139925+02:00  ...    NaN\n",
+       "                      creation_date     notebook_name backend_name  \\\n",
+       "1  2024-03-13 17:17:47.259000+01:00  htu_result_saver  ibmq_mumbai   \n",
+       "0  2024-03-13 17:12:41.329000+01:00  htu_result_saver  ibmq_mumbai   \n",
        "\n",
-       "[2668 rows x 24 columns]"
+       "                 job_id           tags  shots  meas_level  num_qubits  \\\n",
+       "1  cqrx3axhnkbg0081eykg  [test, test2]      1           1           2   \n",
+       "0  cqrx0yb00evg008cydyg  [test, test2]      1           1           2   \n",
+       "\n",
+       "  whatever_info  blabla job_status  \n",
+       "1      whatever  blabla        NaN  \n",
+       "0      whatever  blabla        NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from Scratch import metadata_loader\n",
+    "from result_saver import metadata_loader\n",
     "\n",
     "md = metadata_loader(_extract=True, _drop_inutile=True)\n",
     "md"
@@ -466,11 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17:19:01 Warning: Job ID cqrx0yb00evg008cydyg not found in /Users/mha/qiskit-saver-provider-public/.Scratch/jobs. Retrieving it from the IBMQ provider.... IN FILE: /Users/mha/qiskit-saver-provider-public/result_saver/provider/saver_provider.py, LINE: 77\n",
+      "17:19:09 Warning: Job ID cqrx0yb00evg008cydyg is still running. Aborting.... IN FILE: /Users/mha/qiskit-saver-provider-public/result_saver/provider/saver_provider.py, LINE: 89\n"
+     ]
+    }
+   ],
    "source": [
-    "job = provider.retrieve_job(md.iloc[0][\"job_id\"])"
+    "job = provider.retrieve_job(md.iloc[1][\"job_id\"])"
    ]
   }
  ],
